--- a/thesis/algorithm.tex
+++ b/thesis/algorithm.tex
@@ -15,7 +15,7 @@ recursive calls.
 Thus, the goals of the proposed algorithm are as follows:
 \begin{enumerate}
 \item It does not depend on the structure of a graph.
-\item An example of a chromatic coloring should be easily available.
+\item An example of a chromatic coloring should be available.
 \item It can be easily coded for execution on a computer.
 \item It has significantly better runtime complexity than the exhaustive algorithm.
 \end{enumerate}
@@ -23,11 +23,11 @@ Thus, the goals of the proposed algorithm are as follows:
 To accomplish these goals, the proposed algorithm takes a somewhat different tack: it loops on successively higher
 values of \(k\).  For each candidate \(k\) value, a graph is assumed to be \colorable{k} and a modified version of
 the exhaustive algorithm is executed to either prove or disprove this assumption.  Since a candidate \(k\) value is
-known, certain reversible steps can be applied to mutate \(G\) into simpler graphs with the same colorability and
-test for very early termination of the current Zykov tree.  The first \(k\) for which \(G\) (or one of its
+known, certain reversible steps can be applied to mutate \(G\) into simpler graphs with equivalent colorability and
+test for early termination of the current Zykov tree.  The first \(k\) for which \(G\) (or one of its
 simplifications) is found to be \(k\)-colorable is the chromatic number of \(G\).  As will be shown, the tradeoff
-of looping on \(k\) and very shallow execution of each corresponding Zykov tree far outweighs the need to generate
-an entire Zykov tree, resulting in a much better runtime complexity.
+of looping on \(k\) and shallow execution of each corresponding Zykov tree far outweighs the need to generate an
+entire Zykov tree, resulting in a much better runtime complexity.
 
 One slight disadvantage of the proposed algorithm is that whereas the exhaustive algorithm readily provides
 examples of actual chromatic colorings, the proposed algorithm requires a reverse traversal of its reversible steps
@@ -47,7 +47,7 @@ of the algorithm to a sample graph then follow.
 \subsection{Outer Loop}
 
 The outer loop accepts a graph \(G\) as input and returns \(\X(G)\).  It initially checks for some degenerate cases
-and then loops on increasing values of \(k\).  For each value of \(k\) the called subroutine executes the modified
+and then loops on increasing values of \(k\).  For each value of \(k\), the called subroutine executes the modified
 exhaustive algorithm to determine if \(G\) is \colorable{k}.  The first such successful return identifies
 \(\X(G)\).
 
@@ -65,8 +65,8 @@ The steps of the outer loop are as follows:
 
 \item \label{step:call} If \(G\) is \colorable{k} (\(R=\) true) then return \(k\).
 
-\item \label{step:newg} Otherwise, replace \(G\) with \(G'\).  As will be seen, doing this avoids needless
-  reapplication of certain steps in the called subroutine.
+\item \label{step:newg} Replace \(G\) with \(G'\).  As will be seen, doing this avoids needless reapplication of
+  certain steps in the called subroutine.
 
 \item \label{step:incr} Increment \(k\).
 
@@ -110,9 +110,9 @@ A flowchart of these steps is shown in Figure \ref{fig:outer}.
   \caption{Algorithm Outer Loop}
 \end{figure}
 
-Note that the outer loop is guaranteed to complete because \(k\) will eventually be greater than or equal to \(n\),
-and thus by Proposition \ref{prop:coloring3}, the current state of \(G\) is at least \colorable{k}, causing the
-called subroutine to return true.
+The outer loop is guaranteed to complete because \(k\) will eventually be greater than or equal to \(n\).  Thus, by
+Proposition \ref{prop:coloring3}, the current state of \(G\) is \colorable{k}, causing the called subroutine to
+return true.
 
 \subsection{Called Subroutine}
 
@@ -246,11 +246,12 @@ apply tests that attempt to disprove that the current state of \(G\) is \colorab
 \(k\).  If so, then the current Zykov tree is abandoned and the subroutine returned false.  This allows the outer
 loop to continue with \(k+1\).
 
-The remaining steps of the called subroutine constitute the recursive portion of the modified exhaustive algorithm.
-The subroutine is guaranteed to return because either there will be sufficient vertex contractions such that \(n\le
-k\), resulting in a true return, or sufficient edge additions such that the graph becomes complete and is rejected
-by step \ref{step:common}, resulting in a false return.  Note that in the event of a false return, any
-modifications to the current state of \(G\) resulting from the recursive calls are not returned to the outer loop.
+The remaining steps of the called subroutine, steps \ref{step:select2}--\ref{step:fail}, constitute the recursive
+portion of the modified exhaustive algorithm.  The subroutine is guaranteed to return because either there will be
+sufficient vertex contractions such that \(n\le k\), resulting in a true return, or sufficient edge additions such
+that the graph becomes complete and (as will be shown) is rejected by step \ref{step:density}, resulting in a false
+return.  Note that in the event of a false return, any modifications to the current state of \(G\) resulting from
+the recursive calls are not returned to the outer loop.
 
 \clearpage
 
@@ -285,7 +286,7 @@ The maximum edge threshold test of steps \ref{step:dencalc} and \ref{step:densit
     &= \frac{1}{2}\sum_{i=1}^k(na_i-a_i^2)-\l\sum_{i=1}^ka_i \\
     &= \sum_{i=1}^k\left(\frac{1}{2}na_i-\frac{1}{2}a_i^2-\l a_i\right)
   \end{align*}
-  Now, optimize by taking the gradient and setting the result equal to the zero vector:
+  Now, optimize by taking the gradient and setting the resulting vector equation equal to the zero vector:
   \[\vec{\nabla}F=\sum_{i=1}^k(\frac{n}{2}-a_i-\l)\hat{a_i}=\vec{0}\]
   This results in a system of \(k\) equations of the form:
   \[\frac{n}{2}-a_i-\l=0\]
@@ -374,7 +375,7 @@ The theorems that support vertex removal make use of Lemma \ref{lem:remone}.
   Now, consider the restricted function \(c'=\restrict{c}{V(G-v)}\).  It is still the case that \(c'(u)=c_1\) and
   \(c'(w)=c_2\) and \(c_1\ne c_2\), so \(c'\) is still proper with \(\abs{C}=k\).
 
-  \(\therefore G-v\) is \colorable{k}.
+  Therefore \(G-v\) is \colorable{k}.
 \end{proof}
 
 Lemma \ref{lem:remone} is demonstrated in Figure \ref{fig:remone}.  No matter which vertex is removed, the resulting
@@ -534,7 +535,7 @@ Theorem \ref{thm:lowdeg}.
   \(v\).  So extend \(G-v\) to \(G\) and color \(v\) with one of the available \(k-\deg(v)\) colors.  The result is
   a proper coloring of \(G\) using at most \(k\) colors.
 
-  \(\therefore G\) is \colorable{k}.
+  Therefore \(G\) is \colorable{k}.
 \end{proof}
 
 Theorem \ref{thm:lowdeg} is demonstrated in Figure \ref{fig:lowdeg} for \(k=4\) and \(\deg(v)=3\).
@@ -620,7 +621,7 @@ Theorem \ref{thm:subset}.
   none of these vertices can have the same color as \(v\).  So extend \(G-u\) to \(G\) and color \(u\) with the
   same color as \(v\).  The result is a proper coloring of \(G\) using at most \(k\) colors.
 
-  \(\therefore G\) is \colorable{k}.
+  Therefore \(G\) is \colorable{k}.
 \end{proof}
 
 Theorem \ref{thm:subset} is demonstrated in Figure \ref{fig:subset}.  Since \(N(u)\subseteq N(v)\), \(G\) and
@@ -862,15 +863,16 @@ not a sufficient condition.
 
 \subsubsection{Recursive Steps}
 
-If no more vertices can be removed and the failure tests pass then the called subroutine reverts to the exhaustive
-method.  Step \ref{step:select2} selects two non-adjacent vertices with the smallest number of shared neighbors.
-Such a pair must exist.  Otherwise, the current state of \(G\) is complete, which would have been eliminated by
-step \ref{step:density}.  The first recursive call (step \ref{step:call1}) assumes that the two selected vertices
-have the same color, so they are contracted.  The second recursive call (step \ref{step:call2}) assumes that the
-two selected vertices have different colors, so they are joined by an added edge.  Each call starts a new branch of
-the Zykov tree corresponding to the current value of \(k\).  If either call returns true then it can be concluded
-that the input graph was indeed \colorable{k}.  Otherwise, it can be concluded that the input graph is not
-\colorable{k} and the called subroutine returns the state of \(G\) prior to the recursive calls to the outer loop.
+If nothing more can be done in the preceding steps then steps \ref{step:select2}--\ref{step:fail} revert to the
+exhaustive method.  Step \ref{step:select2} selects two non-adjacent vertices with the smallest number of shared
+neighbors.  Such a pair must exist.  Otherwise, the current state of \(G\) is complete, which would have been
+eliminated by step \ref{step:density}.  The first recursive call (step \ref{step:call1}) assumes that the two
+selected vertices have the same color, so they are contracted.  The second recursive call (step \ref{step:call2})
+assumes that the two selected vertices have different colors, so they are joined by an added edge.  Each call
+starts a new branch of the Zykov tree corresponding to the current value of \(k\).  If either call returns true
+then it can be concluded that the input graph was indeed \colorable{k}.  Otherwise, it can be concluded that the
+input graph is not \colorable{k} and the called subroutine returns the state of \(G\) prior to the recursive calls
+to the outer loop.
 
 These steps are supported by Theorem \ref{thm:recurse}.
 
@@ -881,42 +883,37 @@ These steps are supported by Theorem \ref{thm:recurse}.
 \end{theorem}
 
 \begin{proof}
+  Assume \(G\) is \colorable{k}.  There are two possibilities:
   \begin{description}
-  \item[]
-  \item[\(\implies\)] Assume \(G\) is \colorable{k}.
+  \item [Case 1:] \(u\) and \(v\) have the same color.
 
-    \begin{description}
-    \item [Case a:] \(u\) and \(v\) have the same color.
+    For all \(w\in N(u)\cup N(v)\), it must be the case that \(w\) is a different color than the color of
+    \(u\) and \(v\).  Let \(v'\) be the contracted vertex, so that \(N(v')=N(u)\cup N(v)\) and color \(v'\) with
+    the same color as \(u\) and \(v\).  The result is a proper \coloring{k} of \(G\cdot uv\).
 
-      Then \(\forall\,w\in N(u)\cup N(v)\) it must be the case that \(w\) is a different color than the color of
-      \(u\) and \(v\).  Let \(v'\) be the contracted vertex, so that \(N(v')=N(u)\cup N(v)\), and color \(v'\) with
-      the same color as \(u\) and \(v\).  The result is a proper \coloring{k} of \(G\cdot uv\).
-
-      \(\therefore G\cdot uv\) is \colorable{k}.
+    Therefore \(G\cdot uv\) is \colorable{k}.
       
-    \item [Case b:] \(u\) and \(v\) have the different colors in \(c\).
+  \item [Case 2:] \(u\) and \(v\) have the different colors in \(c\).
 
-      By adding edge \(uv\), \(u\) and \(v\) become adjacent and thus must have different colors.  Therefore, \(u\)
-      and \(v\) can retain their same colors.  The result is a proper \coloring{k} of \(G+uv\).
-    \end{description}
-
-    \(\therefore G\cdot uv\) or \(G+uv\) is \colorable{k}.
-    
-  \item[\(\impliedby\)] Assume \(G\cdot uv\) or \(G+uv\) is \colorable{k}.
-
-    \begin{description}
-    \item [Case a:] \(G\cdot uv\) is \colorable{k}.
-
-      Let \(v'\) be the contracted vertex with some assigned color.  It must be the case that \(\forall\,w\in
-      N(v'), w\) has a different color than \(v'\).  Expand \(G\cdot uv\) to \(G\) and color \(u\) and \(v\) with
-      the same color as \(v'\).  The result is a proper \coloring{k} of \(G\).
-      
-    \item [Case b:] \(G+uv\) is \colorable{k}.
-
-      Remove edge \(uv\).  Since \(u\) and \(v\) are no longer adjacent, there are no requirements on their colors.
-      Thus, they can retain their original colors.  The result is a proper \coloring{k} of \(G\).
-    \end{description}
-
-    \(\therefore G\) is \colorable{k}.
+    By adding edge \(uv\), \(u\) and \(v\) become adjacent and thus must have different colors.  Therefore, \(u\)
+    and \(v\) can retain their same colors.  The result is a proper \coloring{k} of \(G+uv\).
   \end{description}
+
+  Therefore \(G\cdot uv\) or \(G+uv\) is \colorable{k}.
+    
+  For the converse, assume \(G\cdot uv\) or \(G+uv\) is \colorable{k}.  Again, there are two cases:
+  \begin{description}
+  \item [Case 1:] \(G\cdot uv\) is \colorable{k}.
+
+    Let \(v'\) be the contracted vertex with some assigned color.  It must be the case that for all \(w\in N(v')\),
+    \(w\) has a different color than \(v'\).  Expand \(G\cdot uv\) to \(G\) and color \(u\) and \(v\) with
+    the same color as \(v'\).  The result is a proper \coloring{k} of \(G\).
+    
+  \item [Case 2:] \(G+uv\) is \colorable{k}.
+
+    Remove edge \(uv\).  Since \(u\) and \(v\) are no longer adjacent, there are no requirements on their colors.
+    Thus, they can retain their original colors.  The result is a proper \coloring{k} of \(G\).
+  \end{description}
+
+  Therefore \(G\) is \colorable{k}.
 \end{proof}
